<resources>
    <string name="app_name">GureevKurilenko</string>
    <string name="start">Start</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="report">Report</string>
    <string name="exit">Exit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="save">Save</string>
    <string name="back_form_edit">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="exit_from_hello">Exit</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile_profile">Profile</string>
    <string name="edit_profile_profile">Edit</string>
    <string name="back_from_profile">Back</string>
    <string name="textview_name">TextView</string>
    <string name="textviewPhone_number">TextView</string>
    <string name="textviewemail">TextView</string>
    <string name="textview_surname">TextView</string>
    <string name="email_m">Email:</string>
    <string name="surname_m">Surname:</string>
    <string name="number_m">Number:</string>
    <string name="name_m">Name:</string>
    <string name="settings_title">Settings</string>
    <string name="back_from_settings">Back</string>
</resources>